tests/tooling/fixtures/native/execution/positive/switch_conditional_case_return_or_fallthrough.objc3
module SwitchConditionalCaseReturnOrFallthrough;

fn main() -> i32 {
  let value = 1;
  switch (value) {
    case 1:
      if (value == 0) {
        return 7;
      }
    case 2:
      return 42;
    default:
      return 9;
  }
}
