tests/tooling/fixtures/native/execution/negative/protocol_return_nullability_suffix_unsupported.objc3
module ProtocolReturnNullabilitySuffixUnsupported;

fn pick(flag: bool) -> Protocol? {
  if (flag) {
    return 1;
  }
  return 0;
}

fn main() -> i32 {
  if (pick(true) != 0) {
    return 1;
  }
  return 0;
}
